src/objects/OrderApi__Subscription_Plan__c.object
<CustomObject>
    <description>Subscription Plans control the subscription dates with &quot;Termed&quot;, &quot;Evergreen&quot;, and &quot;Calendar&quot; options.</description>
    <fields>
        <fullName>Begins_Next_Year__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When enabled, a membership purchased with this Subscription Plan will have a Term Start Date of January 1 of the following year.</description>
        <label>Begins Next Year</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Advanced_Calendar_Days__c</fullName>
        <description>Number of days before the start of the next calendar term, during which new subscriptions are automatically extended to include the next term.</description>
        <inlineHelpText>Number of days before the start of the next calendar term, during which new subscriptions are automatically extended to include the next term.</inlineHelpText>
        <label>Advanced Calendar Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Advanced_Calendar_Free_Paid__c</fullName>
        <description>Determines whether Advanced Calendar Days are free or paid. Paid days are automatically prorated based on the subscription price.</description>
        <inlineHelpText>Determines whether Advanced Calendar Days are free or paid. Paid days are automatically prorated based on the subscription price.</inlineHelpText>
        <label>Advanced Calendar Free/Paid</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Auto_Renew_Option__c</fullName>
        <description>** Required ** Select &quot;Disabled&quot; to turn off auto-renew for all related Subscriptions, select &quot;Enabled&quot; to allow related Subscriptions to optionally enable auto-renew, select &quot;Required&quot; to enable auto-renew without option.</description>
        <inlineHelpText>** Required ** Select &quot;Disabled&quot; to turn off auto-renew for all related Subscriptions, select &quot;Enabled&quot; to allow related Subscriptions to optionally enable auto-renew, select &quot;Required&quot; to enable auto-renew without option.</inlineHelpText>
        <label>Auto Renew Option</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Disabled</fullName>
                </value>
                <value>
                    <fullName>Enabled</fullName>
                </value>
                <value>
                    <fullName>Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Auto_Send_Proforma_Invoice_Emails__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked an email will be sent using the configurations defined on the Subscription Plan record related to Proforma Invoice Emails</description>
        <inlineHelpText>When checked an email will be sent using the configurations defined on the Subscription Plan record related to Proforma Invoice Emails</inlineHelpText>
        <label>Auto Send Proforma Invoice Emails</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Bill_Cycle_Day__c</fullName>
        <description>** Conditionally Required ** If &quot;Bill Cycle&quot; selected as &quot;CUSTOM&quot; need to define specific day for Bill Cycle.</description>
        <inlineHelpText>** Conditionally Required ** If &quot;Bill Cycle&quot; selected as &quot;CUSTOM&quot; need to define specific day for Bill Cycle.</inlineHelpText>
        <label>Bill Cycle Day</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Bill_Cycle__c</fullName>
        <description>** Required ** Bill Cycles drive the day of month a subscriber is invoiced/auto-charged for a subscription. Select &quot;AUTO&quot; to derive the day of month based upon the Activation/Last Renewal Date. Select &quot;CUSTOM&quot; to specify a specific &quot;Bill Cycle Day&quot;.</description>
        <inlineHelpText>** Required ** Bill Cycles drive the day of month a subscriber is invoiced/auto-charged for a subscription. Select &quot;AUTO&quot; to derive the day of month based upon the Activation/Last Renewal Date. Select &quot;CUSTOM&quot; to specify a specific &quot;Bill Cycle Day&quot;.</inlineHelpText>
        <label>Bill Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AUTO</fullName>
                    <default>true</default>
                    <label>AUTO</label>
                </value>
                <value>
                    <fullName>FIRST</fullName>
                </value>
                <value>
                    <fullName>LAST</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>CUSTOM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Business_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated Override ** Link to related Business Group. Derived from the user&apos;s &quot;Business Group&quot; (App Config) custom setting if not defined on record creation.</description>
        <inlineHelpText>** System Calculated Override ** Link to related Business Group. Derived from the user&apos;s &quot;Business Group&quot; (App Config) custom setting if not defined on record creation.</inlineHelpText>
        <label>Business Group</label>
        <referenceTo>OrderApi__Business_Group__c</referenceTo>
        <relationshipLabel>Subscription Plans</relationshipLabel>
        <relationshipName>Subscription_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Calendar_End_Day__c</fullName>
        <description>Select the end day for the calendar term. If it is not specified, last day of the month will be used.</description>
        <inlineHelpText>Select the end day for the calendar term. If it is not specified, last day of the month will be used.</inlineHelpText>
        <label>Calendar End Day</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01</fullName>
                </value>
                <value>
                    <fullName>02</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
                <value>
                    <fullName>04</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>06</fullName>
                </value>
                <value>
                    <fullName>07</fullName>
                </value>
                <value>
                    <fullName>08</fullName>
                </value>
                <value>
                    <fullName>09</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>19</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>23</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>25</fullName>
                </value>
                <value>
                    <fullName>26</fullName>
                </value>
                <value>
                    <fullName>27</fullName>
                </value>
                <value>
                    <fullName>28</fullName>
                </value>
                <value>
                    <fullName>29</fullName>
                </value>
                <value>
                    <fullName>30</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Calendar_End_Month__c</fullName>
        <description>** Conditionally Required ** Select the end month for the calendar term. Required for all &quot;Calendar&quot; Subscription Plans.</description>
        <inlineHelpText>** Conditionally Required ** Select the end month for the calendar term. Required for all &quot;Calendar&quot; Subscription Plans.</inlineHelpText>
        <label>Calendar End Month</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>01 - January</fullName>
                </value>
                <value>
                    <fullName>02 - February</fullName>
                </value>
                <value>
                    <fullName>03 - March</fullName>
                </value>
                <value>
                    <fullName>04 - April</fullName>
                </value>
                <value>
                    <fullName>05 - May</fullName>
                </value>
                <value>
                    <fullName>06 - June</fullName>
                </value>
                <value>
                    <fullName>07 - July</fullName>
                </value>
                <value>
                    <fullName>08 - August</fullName>
                </value>
                <value>
                    <fullName>09 - September</fullName>
                </value>
                <value>
                    <fullName>10 - October</fullName>
                </value>
                <value>
                    <fullName>11 - November</fullName>
                </value>
                <value>
                    <fullName>12 - December</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Description__c</fullName>
        <description>Optional description for the Subscription Plan.</description>
        <inlineHelpText>Optional description for the Subscription Plan.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderApi__Disable_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, cannot renew subscription due to custom business process. Defaults unchecked.</description>
        <inlineHelpText>When checked, cannot renew subscription due to custom business process. Defaults unchecked.</inlineHelpText>
        <label>Disable Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Automatic_Invoice_Payment__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, system will create scheduled payments against invoices. &quot;Require Payment Method&quot; field will automatically be checked.</description>
        <inlineHelpText>When checked, system will create scheduled payments against invoices. &quot;Require Payment Method&quot; field will automatically be checked.</inlineHelpText>
        <label>Enable Automatic Invoice Payment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Payment_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, subscribers will pay for subscriptions in installments - the frequency/amount is driven by the schedule options configuration fields. Defaults unchecked.</description>
        <inlineHelpText>When checked, subscribers will pay for subscriptions in installments - the frequency/amount is driven by the schedule options configuration fields. Defaults unchecked.</inlineHelpText>
        <label>DEPRECATED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Proration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the system will prorate new subscribers depending upon the &quot;Proration Rule&quot;. Defaults unchecked. Valid only for &quot;Calendar&quot; Subscription Plan Types.</description>
        <inlineHelpText>When checked, the system will prorate new subscribers depending upon the &quot;Proration Rule&quot;. Defaults unchecked. Valid only for &quot;Calendar&quot; Subscription Plan Types.</inlineHelpText>
        <label>Enable Proration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Enable_Schedule__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, subscribers will pay for subscriptions in installments - the frequency/amount is driven by the schedule options configuration fields. Defaults unchecked.</description>
        <inlineHelpText>When checked, subscribers will pay for subscriptions in installments - the frequency/amount is driven by the schedule options configuration fields. Defaults unchecked.</inlineHelpText>
        <label>Enable Schedule</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Grace_Period__c</fullName>
        <description>Defines the number of days after the subscription by which a member can renew a subscription without losing benefits.</description>
        <inlineHelpText>Defines the number of days after the subscription by which a member can renew a subscription without losing benefits.</inlineHelpText>
        <label>Grace Period</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Initial_Term_Months__c</fullName>
        <description>** Conditionally Required ** The initial term, in number of months, for new subscribers of the plan. Required for termed subscription plans. Required for all non-calendar Subscription Plan types.</description>
        <inlineHelpText>** Conditionally Required ** The initial term, in number of months, for new subscribers of the plan. Required for termed subscription plans. Required for all non-calendar Subscription Plan types.</inlineHelpText>
        <label>Initial Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Invoice_Days_Variable__c</fullName>
        <description>The Invoice Days Variable is used to automatically invoice subscribers &quot;X&quot; number of days prior to subscription expiration.</description>
        <inlineHelpText>The Invoice Days Variable is used to automatically invoice subscribers &quot;X&quot; number of days prior to subscription expiration.</inlineHelpText>
        <label>Invoice Days Variable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the Subscription Plan will be made available for selection - as configured for Subscription Plan Items.</description>
        <inlineHelpText>When checked, the Subscription Plan will be made available for selection - as configured for Subscription Plan Items.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Number_Of_Installments__c</fullName>
        <description>** Required Conditionally ** The number of invoices to create for the payment schedule.</description>
        <inlineHelpText>** Required Conditionally ** The number of invoices to create for the payment schedule.</inlineHelpText>
        <label>Number Of Installments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>** System Calculated / Override / Conditionally Required ** Link to related Payment Gateway. Required when &quot;Auto Renew Option&quot; defined as &quot;Enabled&quot; or &quot;Required&quot;.</description>
        <inlineHelpText>** System Calculated / Override / Conditionally Required ** Link to related Payment Gateway. Required when &quot;Auto Renew Option&quot; defined as &quot;Enabled&quot; or &quot;Required&quot;.</inlineHelpText>
        <label>Payment Gateway</label>
        <referenceTo>OrderApi__Payment_Gateway__c</referenceTo>
        <relationshipLabel>Subscription Plans</relationshipLabel>
        <relationshipName>Subscription_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Payment_Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Link to Payment Terms to use for &quot;Invoice&quot; installment schedules.</description>
        <inlineHelpText>** Conditionally Required ** Link to Payment Terms to use for &quot;Invoice&quot; installment schedules. Required for all Subscription Plans with &quot;Enable Scheduled Payments&quot; checked.</inlineHelpText>
        <label>Payment Terms</label>
        <referenceTo>OrderApi__Payment_Terms__c</referenceTo>
        <relationshipLabel>Subscription Plans</relationshipLabel>
        <relationshipName>Subscription_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proforma_Invoice_Authentication_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, the customer paying a proforma invoice will be forced to authenticate prior to accepting payment.</description>
        <inlineHelpText>When checked, the customer paying a proforma invoice will be forced to authenticate prior to accepting payment.</inlineHelpText>
        <label>Proforma Invoice Authentication Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proforma_Invoice_Email_Body__c</fullName>
        <description>The default message used as part of the &quot;Send Proforma Email&quot; Workflow</description>
        <inlineHelpText>The default message used as part of the &quot;Send Proforma Email&quot; Workflow</inlineHelpText>
        <label>Proforma Invoice Email Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proforma_Invoice_Email_From_Address__c</fullName>
        <description>The email address of the sender of the proforma invoice email sent to your customers. Your user&apos;s email will be used if this field is left blank.</description>
        <inlineHelpText>The email address of the sender of the proforma invoice email sent to your customers. Your user&apos;s email will be used if this field is left blank.</inlineHelpText>
        <label>Proforma Invoice Email From Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proforma_Invoice_Email_From_Name__c</fullName>
        <description>The name of the sender of the proforma invoice email as it will display to your customers. Your user&apos;s first name and last name will be used if this field is left blank.</description>
        <inlineHelpText>The name of the sender of the proforma invoice email as it will display to your customers. Your user&apos;s first name and last name will be used if this field is left blank.</inlineHelpText>
        <label>Proforma Invoice Email From Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proforma_Invoice_Email_Subject__c</fullName>
        <description>The default subject of the proforma invoice email sent to your customers. Your user&apos;s email will be used if this field is left blank.</description>
        <inlineHelpText>The default subject of the proforma invoice email sent to your customers. Your user&apos;s email will be used if this field is left blank.</inlineHelpText>
        <label>Proforma Invoice Email Subject</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proforma_Invoice_Footer__c</fullName>
        <description>The contents of this field will display inside the header of all proforma invoice documents generated from Sales Orders linked to this Business Group</description>
        <inlineHelpText>The contents of this field will display inside the header of all proforma invoice documents generated from Sales Orders linked to this Business Group</inlineHelpText>
        <label>Proforma Invoice Footer</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proforma_Invoice_Header__c</fullName>
        <description>The contents of this field will display inside the header of all proforma invoice documents generated from Sales Orders linked to this Business Group</description>
        <inlineHelpText>The contents of this field will display inside the header of all proforma invoice documents generated from Sales Orders linked to this Business Group</inlineHelpText>
        <label>Proforma Invoice Header</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>OrderApi__Proration_Rule__c</fullName>
        <description>** Conditionally Required ** Select the &quot;Proration Rule&quot; to use for prorating the total charges for new subscribers of a &quot;Calendar&quot; Subscription Plan. Required when &quot;Enable Proration&quot; is checked.</description>
        <inlineHelpText>** Conditionally Required ** Select the &quot;Proration Rule&quot; to use for prorating the total charges for new subscribers of a &quot;Calendar&quot; Subscription Plan. Required when &quot;Enable Proration&quot; is checked.</inlineHelpText>
        <label>Proration Rule</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Bi-Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Renewal_Term_Months__c</fullName>
        <description>** System Calculated Override ** The &quot;Renewal Term (Months)&quot; defaults to the &quot;Initial Term (Months)&quot; if no other value is specified.</description>
        <inlineHelpText>** System Calculated Override ** The &quot;Renewal Term (Months)&quot; defaults to the &quot;Initial Term (Months)&quot; if no other value is specified.</inlineHelpText>
        <label>Renewal Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OrderApi__Require_Payment_Method__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When checked, subscribers will be required to maintain an active and valid Payment Method on file. Defaults unchecked.</description>
        <inlineHelpText>When checked, subscribers will be required to maintain an active and valid Payment Method on file. Defaults unchecked.</inlineHelpText>
        <label>Require Payment Method</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OrderApi__Schedule_Frequency__c</fullName>
        <description>** Conditionally Required ** Select the frequency to invoice/charge a subscriber. Required when &quot;Enable Payment Schedule&quot; is checked.</description>
        <inlineHelpText>** Conditionally Required ** Select the frequency to invoice/charge a subscriber. Required when &quot;Enable Payment Schedule&quot; is checked.</inlineHelpText>
        <label>Schedule Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Daily</fullName>
                </value>
                <value>
                    <fullName>Weekly</fullName>
                </value>
                <value>
                    <fullName>Semi-Monthly</fullName>
                </value>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Semi-Annually</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Schedule_Type__c</fullName>
        <description>** Conditionally Required ** Select &quot;Invoice&quot; to invoice the subscriber for each installment. Select &quot;Automatic Payment&quot; to automatically charge the subscriber using a stored Payment Method. Select &quot;User Option&quot; to allow the customer to choose.</description>
        <inlineHelpText>** Conditionally Required ** Select &quot;Invoice&quot; to invoice the subscriber for each installment. Select &quot;Automatic Payment&quot; to automatically charge the subscriber using a stored Payment Method. Select &quot;User Option&quot; to allow the customer to choose.</inlineHelpText>
        <label>Schedule Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Automatic Payment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>OrderApi__Type__c</fullName>
        <description>** Required ** Select the most appropriate option for the Subscription Plan Type.</description>
        <inlineHelpText>** Required ** Select the most appropriate option for the Subscription Plan Type.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Calendar</fullName>
                </value>
                <value>
                    <fullName>Termed</fullName>
                </value>
                <value>
                    <fullName>Lifetime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Show_In_Portal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show record in portal to users</description>
        <label>Show In Portal</label>
        <type>Checkbox</type>
    </fields>
    <label>Subscription Plan</label>
    <listViews>
        <fullName>OrderApi__All</fullName>
        <columns>NAME</columns>
        <columns>OrderApi__Type__c</columns>
        <columns>OrderApi__Bill_Cycle__c</columns>
        <columns>OrderApi__Auto_Renew_Option__c</columns>
        <columns>OrderApi__Require_Payment_Method__c</columns>
        <columns>OrderApi__Enable_Payment_Schedule__c</columns>
        <columns>OrderApi__Enable_Proration__c</columns>
        <columns>OrderApi__Initial_Term_Months__c</columns>
        <columns>OrderApi__Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Subscription Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Subscription Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>